--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
+	<div class="title">
+		<h1>
+			<span style="color:blue; text-align: center; padding: 3%">
+				Home
+			</span>
+		</h1>
+	</div>
+		<h1>The Fothbook for Sheep.</h1>
 
-	<footer></footer>
-</body>
-</html>
-
+<script type="text/javascript" src="main.js"></script>
